# libstem_gamepad

./: CMakeLists.txt  README.md
msvc/libstem_gamepad/: libstem_gamepad.vcxproj
source/gamepad/: Gamepad.h  Gamepad_linux.c  Gamepad_macosx.c  Gamepad_private.c  Gamepad_private.h  Gamepad_windows_dinput.c  Gamepad_windows_mm.c
